# nvim-rs

./: CONTRIBUTING.md  Cargo.toml  README.md  bench_examples.vim  build.rs  rustfmt.toml
.github/workflows/: ci.yml
benches/: bench.rs  rpc.rs  rpc_decode.rs  rpc_tokio.rs
benches/assets/: 400x100.txt
bindings/: generate_bindings.py  neovim_api.rs
examples/: basic.rs  bench_async-std.rs  bench_tokio.rs  handler_drop.rs  nested_requests.rs  quitting.rs  redraw.rs  scorched_earth.rs  scorched_earth_as.rs
src/: create.rs  error.rs  lib.rs  neovim.rs  neovim_api.rs  neovim_api_manual.rs  uioptions.rs
src/create/: async_std.rs  mod.rs  tokio.rs
src/examples/: handler_drop.rs  mod.rs  quitting.rs  scorched_earth.rs
src/exttypes/: buffer.rs  mod.rs  tabpage.rs  window.rs
src/rpc/: decode.rs  encode.rs  handler.rs  mod.rs  model.rs  redraw.rs  skip.rs  unpack.rs
tests/: basic.rs  nested_requests.rs  notifications.rs
tests/common/: mod.rs
tests/connecting/: conns.rs  handshake.rs  mod.rs
tests/regression/: buffering.rs  mod.rs
