[package]
name = "navy-nvim-rs"
version = "0.0.10"
license = "LGPL-3.0"
authors = [
    "KillTheMule <KillTheMule@users.noreply.github.com>",
    "rhysd <rhysd@users.noreply.github.com>",
]
description = "A library for writing neovim rpc clients"
repository = "https://github.com/rhysd/nvim-rs"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["neovim", "nvim", "rpc", "msgpack"]
exclude = [
  "neovim/*",
  ".travis.yml",
  "appveyor.yml",
  ".git",
  ".gitignore",
  ".gitmodules",
  "build.ps1"
]
edition = "2024"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
bench = false

[dependencies]
bytes = "1"
rmp = "0.8.14"
rmpv = "1.3.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["full", "net"] }
tokio-util = { version = "0.7.13", features = ["compat"] }

[dev-dependencies]
tempfile = "3.17.1"
# TODO: if changing tempfile: the rand version is based on whatever version
# tempfile is using, to deduplicate dependencies
fastrand = "2.1.1"
criterion = { version = "0.8.2", features = ["async_futures"] }

[profile.bench]
debug = true
lto = "thin"
codegen-units = 1

[[bench]]
name = "bench"
harness = false

[[example]]
name = "handler_drop"

[[example]]
name = "quitting"

[[example]]
name = "scorched_earth"

[[example]]
name = "basic"

[[example]]
name = "bench_tokio"

[[example]]
name = "nested_requests"

[[test]]
name = "nested_requests"

[[test]]
name = "connecting"
path = "tests/connecting/mod.rs"

[[test]]
name = "notifications"

[[test]]
name = "basic"

[[test]]
name = "regression"
path = "tests/regression/mod.rs"

[[bin]]
name = "linebuffercrash"
